# stable_diffusion

./: .gitignore  README.md  pyproject.toml
notebooks/: 1d_manifold.ipynb  diffusion_animation.ipynb  forward_diffusion.ipynb  langevin.ipynb  sampling_images.ipynb
